# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  TEST_REPORT.md  docker-compose.yml  tmp.md
.claude/: settings.local.json
backend/: AGENTS.md  README.md  backend_AGENTS.md  pyproject.toml
backend/app/: ai_structured_output.py  db.py  kanban_schema.py  main.py  openrouter_client.py
backend/data/: pm.db
backend/tests/: test_ai_structured_output.py  test_db.py  test_kanban_schema.py  test_main.py  test_openrouter_client.py
docs/: DATABASE_DESIGN.md  PLAN.md  codereview.md
frontend/: AGENTS.md  frotend_AGENTS.md  vitest.config.ts
frontend/src/app/: globals.css  page.test.tsx  page.tsx
frontend/src/components/: KanbanBoard.tsx
frontend/src/lib/: kanbanApi.test.ts  kanbanApi.ts
frontend/test-results/: .last-run.json
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
